--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean-css": "^2.0.10",
     "gulp-imagemin": "^3.0.1",
+    "gulp-jade": "^1.1.0",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^1.5.4"
