--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "browser-sync": "^2.13.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-cheerio": "^0.6.2",
     "gulp-clean-css": "^2.0.10",
     "gulp-imagemin": "^3.0.1",
     "gulp-jade": "^1.1.0",
+    "gulp-replace": "^0.5.4",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^2.3.2",
+    "gulp-svg-sprite": "^1.3.3",
+    "gulp-svgmin": "^1.2.2",
     "gulp-uglify": "^1.5.4"
   }
 }
