--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "gulp-jade": "^1.1.0",
     "gulp-replace": "^0.5.4",
     "gulp-rigger": "^0.5.8",
+    "gulp-rimraf": "^0.2.0",
     "gulp-sass": "^2.3.2",
     "gulp-svg-sprite": "^1.3.3",
     "gulp-svgmin": "^1.2.2",
-    "gulp-uglify": "^1.5.4"
+    "gulp-uglify": "^1.5.4",
+    "rimraf": "^2.5.2"
   }
 }
