--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "author": "",
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
+    "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.13.0",
+    "eslint": "^1.10.3",
+    "eslint-plugin-requirejs": "",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cheerio": "^0.6.2",
@@ -12,12 +19,12 @@
     "gulp-imagemin": "^3.0.1",
     "gulp-jade": "^1.1.0",
     "gulp-replace": "^0.5.4",
-    "gulp-rigger": "^0.5.8",
     "gulp-rimraf": "^0.2.0",
     "gulp-sass": "^2.3.2",
     "gulp-svg-sprite": "^1.3.3",
     "gulp-svgmin": "^1.2.2",
     "gulp-uglify": "^1.5.4",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "webpack-stream": "^3.2.0"
   }
 }
